src/objects/SJM_Error_Handling__c.object
<CustomObject>
    <fields>
        <fullName>CandidateID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CandidateID</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipName>PII_Error_Handling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Category__c</fullName>
        <description>To store what type of error category</description>
        <label>Error Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Number__c</fullName>
        <label>Error Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>SJM Error Handling</label>
    <nameField>
        <displayFormat>PII-{00000}</displayFormat>
        <label>PII Error Handling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SJM Error Handling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>